--- a/src/components/service.html
+++ b/src/components/service.html
@@ -205,7 +205,7 @@
   <div class="text-center mt-4">
     <button
       id="show-more-btn"
-      class="bg-green-600 text-white px-4 py-2 rounded-md cursor-pointer"
+      class="button-85" role="button"
     >
       Xem Thêm
     </button>
@@ -222,8 +222,76 @@
   .hidden {
     display: none;
   }
+
+  .button-85 {
+  padding: 0.6em 2em;
+  border: none;
+  outline: none;
+  color: rgb(255, 255, 255);
+  background: #0b881c;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-85:before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #7a00ff,
+    #ff00c8,
+    #ff0000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing-button-85 20s linear infinite;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+@keyframes glowing-button-85 {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.button-85:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #32b920;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
 </style>
 
+<!--  -->
 <section class="py-12" data-aos="fade-up">
   <h2
     class="text-center text-2xl md:text-3xl font-bold text-green-600 mb-8 bg-green-50 p-6"
@@ -272,13 +340,7 @@
           src="../../assets/images/khach-hang-1.png"
           alt="Khách hàng B"
           class="w-full h-full object-cover rounded-lg"
-          Hình
-          ảnh
-          vuông
-          với
-          góc
-          bo
-          tròn
+          
         />
       </div>
       <p class="text-gray-700 italic mb-4">
