--- a/src/components/popup-2.html
+++ b/src/components/popup-2.html
@@ -80,8 +80,12 @@
 <style>
   .popup-hidden {
     display: none !important;
+    opacity: 0;
+    visibility: hidden;
   }
   .popup-visible {
     display: flex !important;
+    opacity: 1;
+    visibility: visible;
   }
 </style>
