undate ảnh bấ sĩ

--- a/src/components/about.html
+++ b/src/components/about.html
@@ -26,7 +26,7 @@
         <img
           src="../../assets/images/anh-bac-si.png"
           alt="Bác sĩ tận tâm"
-          class="w-40 h-40 mb-4 mx-auto group-hover:scale-105 transition-transform"
+          class="w-auto h-40 mb-4 mx-auto group-hover:scale-105 transition-transform"
         />
         <div>
           <h3 class="text-green-700 font-bold uppercase text-sm mb-2">
@@ -48,7 +48,7 @@
         <img
           src="../../assets/images/bap-thuoc-dongy-cach-dung.png"
           alt="Bài thuốc hay"
-          class="w-40 h-40 mb-4 mx-auto group-hover:scale-105 transition-transform"
+          class="w-auto h-40 mb-4 mx-auto group-hover:scale-105 transition-transform"
         />
         <h3 class="text-green-700 font-bold uppercase text-sm mb-2">
           Bài thuốc gia truyền
@@ -67,7 +67,7 @@
         <img
           src="../../assets/images/vat-ly-tri-lieu.png"
           alt="Vật lý trị liệu"
-          class="w-40 h-40 mb-4 mx-auto group-hover:scale-105 transition-transform"
+          class="w-auto h-40 mb-4 mx-auto group-hover:scale-105 transition-transform"
         />
         <h3 class="text-green-700 font-bold uppercase text-sm mb-2">
           Vật lý trị liệu
@@ -86,7 +86,7 @@
         <img
           src="../../assets/images/nghien-cuu.png"
           alt="Nghiên cứu chuyên sâu"
-          class="w-40 h-40 mb-4 mx-auto group-hover:scale-105 transition-transform"
+          class="w-auto h-40 mb-4 mx-auto group-hover:scale-105 transition-transform"
         />
         <h3 class="text-green-700 font-bold uppercase text-sm mb-2">
           Nghiên cứu chuyên sâu
