--- a/src/components/why-chosse.html
+++ b/src/components/why-chosse.html
@@ -13,7 +13,7 @@
         <img
           src="../../assets/images/giay-phep-hoat-dong.png"
           alt="Giấy phép hoạt động"
-          class="w-36 h-36 mx-auto transition-all duration-300"
+          class="w-auto h-36 mx-auto transition-all duration-300"
         />
       </div>
       <h3 class="text-xl font-semibold text-green-700 mb-2">
@@ -33,7 +33,7 @@
         <img
           src="../../assets/images/chung-chi-hanh-nghe.png"
           alt="Chứng chỉ hành nghề"
-          class="w-36 h-36 mx-auto transition-all duration-300"
+          class="w-auto h-36 mx-auto transition-all duration-300"
         />
       </div>
       <h3 class="text-xl font-semibold text-green-700 mb-2">
@@ -53,7 +53,7 @@
         <img
           src="../../assets/images/ngai-cuu-chua-benh-bluecare.png"
           alt="Dược liệu sạch"
-          class="w-36 h-36 mx-auto transition-all duration-300"
+          class="w-auto h-36 mx-auto transition-all duration-300"
         />
       </div>
       <h3 class="text-xl font-semibold text-green-700 mb-2">Dược Liệu Sạch</h3>
