Nang cấp màu sắc bg navbar

--- a/src/components/navbar.html
+++ b/src/components/navbar.html
@@ -1,7 +1,7 @@
 <section>
   <nav
   id="smart-navbar"
-  class="w-full bg-green-50 z-[60] transition-all duration-300"
+  class="w-full  z-[60] transition-all duration-300 bg-gradient-to-br from-[#bcf3d6] to-[#10bb68]"
   aria-label="Main navigation"
   data-aos="fade-down"
 >
@@ -38,7 +38,7 @@
         id="menu"
         role="navigation"
         aria-label="Menu chính"
-        class="fixed justify-center inset-0 z-[70] w-screen h-screen bg-green-50 shadow-lg transform translate-x-full transition-transform duration-500 ease-in-out will-change-transform pt-16 px-6 box-border overflow-y-auto overscroll-contain touch-pan-y md:static md:z-auto md:shadow-none md:flex md:items-center md:space-x-4 xl:space-x-6 md:p-2 md:transform-none md:translate-x-0 md:w-auto md:h-auto md:bg-transparent"
+        class="fixed justify-center inset-0 z-[70] w-screen h-screen   shadow-lg transform translate-x-full transition-transform duration-500 ease-in-out will-change-transform pt-16 px-6 box-border overflow-y-auto overscroll-contain touch-pan-y md:static md:z-auto md:shadow-none md:flex md:items-center md:space-x-4 xl:space-x-6 md:p-2 md:transform-none md:translate-x-0 md:w-auto md:h-auto md:bg-transparent"
       >
         <!-- Nút đóng menu mobile -->
         <button
