--- a/src/components/banner.html
+++ b/src/components/banner.html
@@ -111,7 +111,7 @@
       <img
         src="../../assets/images/anh-bac-si-11.png"
         alt="Đội ngũ bác sĩ Đông y"
-        class="w-full h-52 rounded-2xl shadow-lg object-cover"
+        class="w-full h-full rounded-2xl shadow-lg object-cover"
       />
       <div
         class="absolute -bottom-4 -right-4 bg-white rounded-xl shadow p-3 text-sm"
