--- a/src/components/navbar.html
+++ b/src/components/navbar.html
@@ -1,7 +1,7 @@
 <section>
   <nav
   id="smart-navbar"
-  class="w-full  z-[60] transition-all duration-300 bg-gradient-to-br from-[#bcf3d6] to-[#52e49d]"
+  class="w-full  z-[60] transition-all duration-300 bg-gradient-to-br from-[#d2dfd8] to-[#52e49d]"
   aria-label="Main navigation"
   data-aos="fade-down"
 >
