--- a/src/components/navbar.html
+++ b/src/components/navbar.html
@@ -1,7 +1,7 @@
 <section>
   <nav
   id="smart-navbar"
-  class="w-full  z-[60] transition-all duration-300 bg-gradient-to-br from-[#d2dfd8] to-[#52e49d]"
+  class="w-full  z-[60] transition-all duration-300 "
   aria-label="Main navigation"
   data-aos="fade-down"
 >
@@ -32,7 +32,7 @@
 
       <!-- Main menu -->
     </div>
-    <div class="">
+    <div class="bg-gradient-to-br from-[#d2dfd8] to-[#52e49d]">
        <div class="">
       <ul
         id="menu"
